# heros

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  PLAN.md  README.md  pyproject.toml  requirements.txt
configs/: eval_config.yaml
docs/: arxiv-draft.md
eval/: run_evaluation.py  run_self_improvement_eval.py
src/heros/: __init__.py  agent.py  baseline_agent.py  benchmark.py  boundary_enforcer.py  buffer.py  core.py  critic.py  env.py  evaluator.py  heros_agent_wrapper.py  inference_engine.py  interpretability.py  logging_utils.py  planner.py  self_improver.py  trainer.py  uncertainty.py
tests/: test_boundary_enforcer.py  test_buffer.py  test_core.py  test_critic.py  test_evaluator.py  test_interpretability.py  test_planner.py  test_self_improver.py  test_skeleton.py  test_uncertainty.py
