[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "heros"
version = "0.1.0"
description = "HeRoS — Hindsight-driven Reinforcement with Subgoal Milestones"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]
