[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heros"
version = "0.1.0"
description = "HEROS: Hierarchical subgoal planning for autonomous agents"
requires-python = ">=3.9"
dependencies = [
    "openai>=1.0.0",
    "transformers",
    "torch",
    "numpy",
    "pytest>=8.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.setuptools.packages.find]
where = ["src/"]
